[project]
name = "langgraph-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.6",
    "langchain-tavily>=0.2.15",
    "langgraph>=1.0.5",
    "openai>=2.6.1",
    "tavily-python>=0.7.17",
]
